git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@304 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/productos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/productos/startup.vm
@@ -121,6 +121,9 @@
 				<input type="hidden" name="total_porcentaje" value="0">
 				<input type="hidden" name="total_tr">
 				<input type="hidden" name="incluye_pro">
+
+                                <input type="hidden" name="edito_imagen" value="0">
+                                <input type="hidden" name="edito_pdf" value="0">
 				
                     <div id="div_two" title="" class="product_div_two">
                         <div class="columns on-2">
