--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -308,6 +308,7 @@
 												</ul>
 											</li>
 											-->
+											
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
@@ -344,6 +345,14 @@
 												</ul>
 											</li>
 											-->
+											
+											<li>
+												<a href="#" class="sub">Descargas &raquo;</a>
+												<ul>
+													<li><a href="../gralfichatecnica/startup.agnux">Descarga Ficha Tecnica</a></li>
+												</ul>
+											</li>
+											
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
@@ -536,10 +545,9 @@
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
+													<li class="topline"><a href="../graldocs/startup.agnux">Actualizador C&oacute;digos ISO</a></li>
+													<li class="topline"><a href="../graltipocambio/startup.agnux">Actualizador Tipo Cambio</a></li>
 													
-                                                                                                        <li class="topline"><a href="../graldocs/startup.agnux">Actualizador C&oacute;digos ISO</a></li>
-                                                                                                        <li class="topline"><a href="../graltipocambio/startup.agnux">Actualizador Tipo Cambio</a></li>
-												
 												</ul>
 											</li>
 											
