--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -324,9 +324,11 @@
 													-->
 													<!--
 													esto solo es para kemika y kathion
-													-->
 													<li class="topline"><a href="../invordpresuben/startup.agnux">Orden de Producci&oacute;n</a></li>
 													<li class="topline"><a href="../invordsubensamble/startup.agnux">Producci&oacute;n de Subensamble</a></li>
+													<li class="topline"><a href="../invordsubensamble/startup.agnux">Costos</a></li>
+													-->
+													<li class="topline"><a href="../invcontrolcostos/startup.agnux">Control de Costos</a></li>
 													<!--
 													<li class="topline"><a href="#">Actualizar Precios</a></li>
 													<li class="topline"><a href="#">Existencias F&iacute;sicas</a></li>
