git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@355 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -477,6 +477,7 @@
                                                                                                         <li class="topline"><a href="../crmregistrollamadas/startup.agnux">Registro de Llamadas</a></li>
 													<li class="topline"><a href="../crmoportunidades/startup.agnux">Registro de Oportunidades</a></li>
                                                                                                         <li class="topline"><a href="../crmmetas/startup.agnux">Registro de Metas </a></li>
+                                                                                                        <li class="topline"><a href="../crmregistrocasos/startup.agnux">Registro de Casos</a></li>
 												</ul>
 											</li>
 										</ul>
