git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@357 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/crmregistrocasos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrocasos/startup.vm
@@ -213,10 +213,10 @@
                                                                 <td >&nbsp;</td>
                                                                 <td >Agente</td>
                                                                 <td >&nbsp;</td>
-                                                                <td colspan="6"><select name="select_agente" style="width:100px;"></select></td>
+                                                                <td colspan="6"><select name="select_agente" style="width:300px;"></select></td>
                                                                 <td >&nbsp;<div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
                                                                
-                                                                <td ><a href="#" id="busca_agente">(Buscar)</a></td>
+                                                                <td >&nbsp;</a></td>
                                                                 <td >&nbsp;</td>
 
 
